# drawio_xml_generator

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
docs/: README.md
src/drawio_xml_generator/: constants.py  main.py  net_node.py  nodes.py  utils.py
